# TC1-v2

./: .gitignore  README.md  pipeline-bk.py  pyproject.toml  run_exp.sh
src/: main.py  pipeline.py
src/config/: models.yml  parser.py
src/data/: __init__.py  loader.py  preprocess.py
src/models/: __init__.py  ensemble.py  linear.py  mlp.py  svr.py  utils.py
src/plots/: __init__.py  boxplot.py  diagnostics.py  learning_curve.py  residuals.py  scatter.py
src/training/: evaluation.py  trainer.py
src/utils/: io.py  logging.py  metrics.py  statistics.py
